fix: fixed background image on mobile devices

--- a/gamestar/static/css/style.css
+++ b/gamestar/static/css/style.css
@@ -4,8 +4,20 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
-    background-color: #333;
     overflow-y: scroll;
+    background-color: #333;
+}
+
+#background {
+    background-color: #333;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-blend-mode: overlay;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    z-index: -1;
 }
 
 ::-webkit-scrollbar {
